--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "npm run build && electron .",
     "build": "webpack --mode development",
-    "watch": "webpack --watch --mode development"
+    "watch": "webpack --watch --mode development",
+    "clean": "rimraf dist && rimraf out && rimraf release && rimraf node_modules/.cache"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +24,7 @@
     "electron-reload": "^2.0.0-alpha.1",
     "postcss": "^8.4.47",
     "postcss-loader": "^7.3.3",
+    "rimraf": "^6.0.1",
     "style-loader": "^3.3.3",
     "tailwindcss": "^3.4.13",
     "webpack": "^5.95.0",
@@ -30,6 +32,7 @@
     "webpack-dev-server": "^5.1.0"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.0.3",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
@@ -59,6 +62,8 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@tanstack/react-table": "^8.20.5",
+    "better-sqlite3": "^11.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -66,6 +71,7 @@
     "electron-store": "^10.0.0",
     "embla-carousel-react": "^8.3.0",
     "input-otp": "^1.2.4",
+    "jotai": "^2.10.1",
     "lucide-react": "^0.453.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
@@ -77,7 +83,6 @@
     "recharts": "^2.13.0",
     "sequelize": "^6.37.4",
     "sonner": "^1.5.0",
-    "sqlite3": "^5.1.7",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
