--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "src/main/main.js",
   "scripts": {
     "start": "npm run build && electron .",
+    "fst": "electron .",
     "build": "webpack --mode development",
     "watch": "webpack --watch --mode development",
     "clean": "rimraf dist && rimraf out && rimraf release && rimraf node_modules/.cache"
@@ -21,7 +22,6 @@
     "css-loader": "^6.8.1",
     "electron": "^32.1.2",
     "electron-packager": "^17.1.2",
-    "electron-reload": "^2.0.0-alpha.1",
     "postcss": "^8.4.47",
     "postcss-loader": "^7.3.3",
     "rimraf": "^6.0.1",
@@ -68,6 +68,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "electron-reload": "^2.0.0-alpha.1",
     "electron-store": "^10.0.0",
     "embla-carousel-react": "^8.3.0",
     "input-otp": "^1.2.4",
