--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mymemo",
+  "name": "kin",
   "version": "1.0.0",
   "main": "src/main/main.js",
   "scripts": {
@@ -12,7 +12,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "KeepIdeaNote - Cross-Platform Note App",
   "devDependencies": {
     "@babel/core": "^7.25.8",
     "@babel/preset-env": "^7.25.8",
@@ -68,7 +68,6 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
-    "electron-reload": "^2.0.0-alpha.1",
     "electron-store": "^10.0.0",
     "embla-carousel-react": "^8.3.0",
     "input-otp": "^1.2.4",
@@ -81,6 +80,8 @@
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.4",
     "react-router-dom": "^6.27.0",
+    "react-spinner": "^0.2.7",
+    "react-spinners": "^0.14.1",
     "recharts": "^2.13.0",
     "sequelize": "^6.37.4",
     "sonner": "^1.5.0",
