프로젝트 리네임 및 비사용 파일 제거
프로젝트 이름을 "mymemo"에서 "kin"으로 변경함. 사용되지 않는 데이터 생성 스크립트 및 스키마 파일 제거, 새로운 로더 컴포넌트 추가와 다양한 UI 컴포넌트 설정.

구체적으로:
- "tasks" 관련 스키마 및 데이터 시딩 파일 삭제
- 프로젝트 이름 변경과 관련된 설정 파일 수정 (package.json, .idea 설정 파일)
- Suspense 로더를 바 로더로 변경
- AllComponents.jsx 파일에 다양한 UI 컴포넌트 추가 및 설정

전체적으로 프로젝트 구조를 간소화하고 네이밍 일관성을 유지하도록 개선함.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "npm run build && electron .",
     "fst": "electron .",
     "build": "webpack --mode development",
-    "watch": "webpack --watch --mode development",
+    "watch": "concurrently \"npm run build -- --watch\" \"electron .\"",
     "clean": "rimraf dist && rimraf out && rimraf release && rimraf node_modules/.cache"
   },
   "keywords": [],
@@ -66,7 +66,10 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "concurrently": "^9.0.1",
     "date-fns": "^3.6.0",
+    "electron-localshortcut": "^3.2.1",
+    "electron-reload": "^2.0.0-alpha.1",
     "electron-store": "^10.0.0",
     "embla-carousel-react": "^8.3.0",
     "input-otp": "^1.2.4",
